<resources>
    <string name="app_name">ToyProject2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- home -->
    <string name="home_menu_category">카테고리</string>
    <string name="home_menu_search">검색</string>
    <string name="home_menu_main">홈</string>
    <string name="home_menu_cart">장바구니</string>
    <string name="home_menu_mypage">마이</string>

</resources>